--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,6 @@
       "**/CVS": true
    },
    "files.autoSave": "off",
-   "workbench.colorTheme": "light",
+   "workbench.colorTheme": "Visual Studio Light",
    "editor.defaultFormatter": "HookyQR.beautify",
 }
