--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-asgiref==3.3.4
-boto3==1.17.97
-botocore==1.20.97
+asgiref==3.4.1
+boto3==1.18.12
+botocore==1.21.12
 dj-database-url==0.5.0
-Django==3.2.4
-django-allauth==0.41.0
+Django==3.2.6
+django-allauth==0.45.0
 django-storages==1.11.1
-gunicorn==20.1.0
 jmespath==0.10.0
 oauthlib==3.1.1
 psycopg2-binary==2.9.1
+PyJWT==2.1.0
 python3-openid==3.2.0
 pytz==2021.1
 requests-oauthlib==1.3.0
-s3transfer==0.4.2
+s3transfer==0.5.0
 sqlparse==0.4.1
